--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Figtree:wght@400;500;600;700;800;900&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +6,24 @@
 }
 
 body {
-  background-color: #111;
-  color: #fff;
+  background-color: transparent;
+  color: #000;
+  position: relative;
+  font-family: "Figtree", sans-serif;
+  overflow: hidden;
+}
+
+h1 {
+  font-size: 80px;
+  text-align: center;
+  line-height: 1;
+  font-weight: 900;
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
 }/*# sourceMappingURL=styles.css.map */
