Tweak shape styling, add mix-blend-mode

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@
 
 body {
   background-color: transparent;
-  color: #000;
+  color: #fff;
   position: relative;
   font-family: "Figtree", sans-serif;
   overflow: hidden;
@@ -26,4 +26,5 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none;
+  mix-blend-mode: difference;
 }/*# sourceMappingURL=styles.css.map */
