Add mobile touch event listeners, add favicon, change text

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,19 +5,16 @@
   box-sizing: border-box;
 }
 
+html {
+  position: fixed;
+}
+
 body {
   background-color: transparent;
   color: #fff;
-  position: relative;
+  position: fixed;
   font-family: "Figtree", sans-serif;
-  overflow: hidden;
-}
-
-h1 {
-  font-size: 80px;
-  text-align: center;
-  line-height: 1;
-  font-weight: 900;
+  overscroll-behavior-y: contain;
 }
 
 .text {
@@ -26,5 +23,20 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
   pointer-events: none;
+  text-align: center;
+}
+.text h1 {
+  font-size: 80px;
+  text-align: center;
+  line-height: 1;
+  font-weight: 900;
   mix-blend-mode: difference;
+}
+.text p {
+  margin: 20px 0 0 0;
+  color: #666;
+}
+
+canvas {
+  vertical-align: bottom;
 }/*# sourceMappingURL=styles.css.map */
